// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inserted above threshold 1`] = `
Array [
  "
    .Button0-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button1-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button2-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button3-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button4-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button5-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button6-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button7-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button8-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button9-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button10-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button11-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button12-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button13-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button14-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button15-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button16-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button17-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button18-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button19-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button20-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button21-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button22-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button23-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button24-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button25-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button26-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button27-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button28-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button29-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button30-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button31-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button32-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button33-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button34-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button35-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button36-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button37-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button38-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button39-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button40-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button41-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button42-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button43-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button44-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button45-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button46-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button47-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button48-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button49-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button50-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button51-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button52-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button53-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button54-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button55-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button56-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button57-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button58-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button59-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button60-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button61-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button62-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button63-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button64-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button65-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button66-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button67-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button68-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button69-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button70-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button71-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button72-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button73-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button74-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button75-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button76-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button77-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button78-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button79-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button80-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button81-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button82-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button83-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button84-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button85-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button86-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button87-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button88-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button89-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button90-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button91-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button92-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button93-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button94-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button95-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button96-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button97-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button98-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button99-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button100-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button101-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button102-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button103-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button104-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button105-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button106-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button107-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button108-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button109-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button110-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button111-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button112-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button113-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button114-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button115-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button116-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button117-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button118-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button119-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button120-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button121-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button122-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button123-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button124-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button125-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button126-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button127-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button128-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button129-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button130-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button131-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button132-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button133-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button134-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button135-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button136-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button137-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button138-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button139-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button140-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button141-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button142-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button143-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button144-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button145-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button146-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button147-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button148-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button149-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button150-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button151-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button152-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button153-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button154-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button155-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button156-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button157-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button158-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button159-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button160-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button161-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button162-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button163-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button164-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button165-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button166-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button167-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button168-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button169-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button170-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button171-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button172-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button173-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button174-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button175-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button176-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button177-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button178-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button179-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button180-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button181-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button182-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button183-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button184-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button185-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button186-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button187-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button188-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button189-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button190-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button191-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button192-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button193-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button194-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button195-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button196-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button197-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button198-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button199-{{ hash }} {
      color:purple;
    }
  ",
  "
    .Button200-{{ hash }} {
      color:purple;
    }
  ",
]
`;

exports[`inserted above threshold 2`] = `Array []`;

exports[`inserted styles 1`] = `
Array [
  "
    .Button-{{ hash }} {
      color:red;
    }
  ",
]
`;

exports[`inserted styles 2`] = `Array []`;

exports[`inserted styles with mixin 1`] = `
Array [
  "
    .Button-{{ hash }} {
      color:purple;
    }
  ",
]
`;

exports[`inserted styles with mixin 2`] = `
Array [
  "
    .Mixin-anonWhen-{{ hash }}-1.Button-{{ hash }} {
      color:blue;
    }
  ",
]
`;
